--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-02</title>
+    <title>B10A2-versatile-ui-main</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -25,7 +25,7 @@
         </nav>
         <section class="banner">
             <div class="banner-content">
-                <h2>Get body in <br> shape & stay <br> healthy</h2>
+                <h2>Get body in <br> <span class="miama-font">shape</span> & stay <br> healthy</h2>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
                     help
                     you get fit and stay fit!
