--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
+            <div class="ham-burger"><i class="fa-solid fa-bars"></i></div>
         </nav>
         <section class="banner">
             <div class="banner-content">
